# absmouth

./: .gitignore  Dockerfile  Dockerfile.openvino  Dockerfile.rknpu  LICENSE  README.md  config.py  flake.nix  model.py  pyproject.toml  subsonic.py  subsonic_client.py
.github/workflows/: docker-release.yml
absmouth/: __init__.py  abspitch.py  config.py  db.py  model.py  subsonic.py  subsonic_client.py
